add style priority

--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
                         <div class="priority__card">
                             <img class="priority__card_icon" src="./image/priority__card_icon.png" alt="icon">
                             <div class="priority__card_text">
-                                <p class="priority__card_title">Ведение бухгалтерии по вашим первичным документам</p>
-                                <p class="priority__card_subtitle">Мы отражаем в бухгалтерской программе 1С все операции вашего поселка — например,</p>
+                                <p class="priority__card_title">Сдача отчетности</p>
+                                <p class="priority__card_subtitle">Мы ведем учет ваших кадров, начисляем и выплачиваем зарплату, правильно и вовремя</p>
                             </div>
                         </div>
                     </div>
@@ -86,45 +86,22 @@
                         <div class="priority__card">
                             <img class="priority__card_icon" src="./image/priority__card_icon.png" alt="icon">
                             <div class="priority__card_text">
-                                <p class="priority__card_title">Ведение бухгалтерии по вашим первичным документам</p>
-                                <p class="priority__card_subtitle">Мы отражаем в бухгалтерской программе 1С все операции вашего поселка — например,</p>
+                                <p class="priority__card_title">Индивидуальный договор</p>
+                                <p class="priority__card_subtitle">Заключим индивидуальный договор с вами, отразим все необходимые именно вам</p>
                             </div>
                         </div>
                         <div class="priority__card">
                             <img class="priority__card_icon" src="./image/priority__card_icon.png" alt="icon">
                             <div class="priority__card_text">
-                                <p class="priority__card_title">Ведение бухгалтерии по вашим первичным документам</p>
-                                <p class="priority__card_subtitle">Мы отражаем в бухгалтерской программе 1С все операции вашего поселка — например,</p>
+                                <p class="priority__card_title">Защита от ошибок</p>
+                                <p class="priority__card_subtitle">Фиксируем в договоре нашу финансовую ответственность на случай любых ошибок. </p>
                             </div>
                         </div>
                         <div class="priority__card">
                             <img class="priority__card_icon" src="./image/priority__card_icon.png" alt="icon">
                             <div class="priority__card_text">
-                                <p class="priority__card_title">Ведение бухгалтерии по вашим первичным документам</p>
-                                <p class="priority__card_subtitle">Мы отражаем в бухгалтерской программе 1С все операции вашего поселка — например,</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="priority__cards_row">
-                        <div class="priority__card">
-                            <img class="priority__card_icon" src="./image/priority__card_icon.png" alt="icon">
-                            <div class="priority__card_text">
-                                <p class="priority__card_title">Ведение бухгалтерии по вашим первичным документам</p>
-                                <p class="priority__card_subtitle">Мы отражаем в бухгалтерской программе 1С все операции вашего поселка — например,</p>
-                            </div>
-                        </div>
-                        <div class="priority__card">
-                            <img class="priority__card_icon" src="./image/priority__card_icon.png" alt="icon">
-                            <div class="priority__card_text">
-                                <p class="priority__card_title">Ведение бухгалтерии по вашим первичным документам</p>
-                                <p class="priority__card_subtitle">Мы отражаем в бухгалтерской программе 1С все операции вашего поселка — например,</p>
-                            </div>
-                        </div>
-                        <div class="priority__card">
-                            <img class="priority__card_icon" src="./image/priority__card_icon.png" alt="icon">
-                            <div class="priority__card_text">
-                                <p class="priority__card_title">Ведение бухгалтерии по вашим первичным документам</p>
-                                <p class="priority__card_subtitle">Мы отражаем в бухгалтерской программе 1С все операции вашего поселка — например,</p>
+                                <p class="priority__card_title">Оповещение должников</p>
+                                <p class="priority__card_subtitle">Делаем ежемесячные рассылки о состоянии расчетов с собственниками участков, это</p>
                             </div>
                         </div>
                     </div>
@@ -132,45 +109,22 @@
                         <div class="priority__card">
                             <img class="priority__card_icon" src="./image/priority__card_icon.png" alt="icon">
                             <div class="priority__card_text">
-                                <p class="priority__card_title">Ведение бухгалтерии по вашим первичным документам</p>
+                                <p class="priority__card_title">Сверки и переписка с членами СНТ по e-mail</p>
                                 <p class="priority__card_subtitle">Мы отражаем в бухгалтерской программе 1С все операции вашего поселка — например,</p>
                             </div>
                         </div>
                         <div class="priority__card">
                             <img class="priority__card_icon" src="./image/priority__card_icon.png" alt="icon">
                             <div class="priority__card_text">
-                                <p class="priority__card_title">Ведение бухгалтерии по вашим первичным документам</p>
-                                <p class="priority__card_subtitle">Мы отражаем в бухгалтерской программе 1С все операции вашего поселка — например,</p>
+                                <p class="priority__card_title">Переписки с государственными органами</p>
+                                <p class="priority__card_subtitle">Ответим на письма ИФНС и фондов, дадим пояснения по запросу.</p>
                             </div>
                         </div>
                         <div class="priority__card">
                             <img class="priority__card_icon" src="./image/priority__card_icon.png" alt="icon">
                             <div class="priority__card_text">
-                                <p class="priority__card_title">Ведение бухгалтерии по вашим первичным документам</p>
-                                <p class="priority__card_subtitle">Мы отражаем в бухгалтерской программе 1С все операции вашего поселка — например,</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="priority__cards_row">
-                        <div class="priority__card">
-                            <img class="priority__card_icon" src="./image/priority__card_icon.png" alt="icon">
-                            <div class="priority__card_text">
-                                <p class="priority__card_title">Ведение бухгалтерии по вашим первичным документам</p>
-                                <p class="priority__card_subtitle">Мы отражаем в бухгалтерской программе 1С все операции вашего поселка — например,</p>
-                            </div>
-                        </div>
-                        <div class="priority__card">
-                            <img class="priority__card_icon" src="./image/priority__card_icon.png" alt="icon">
-                            <div class="priority__card_text">
-                                <p class="priority__card_title">Ведение бухгалтерии по вашим первичным документам</p>
-                                <p class="priority__card_subtitle">Мы отражаем в бухгалтерской программе 1С все операции вашего поселка — например,</p>
-                            </div>
-                        </div>
-                        <div class="priority__card">
-                            <img class="priority__card_icon" src="./image/priority__card_icon.png" alt="icon">
-                            <div class="priority__card_text">
-                                <p class="priority__card_title">Ведение бухгалтерии по вашим первичным документам</p>
-                                <p class="priority__card_subtitle">Мы отражаем в бухгалтерской программе 1С все операции вашего поселка — например,</p>
+                                <p class="priority__card_title">1С</p>
+                                <p class="priority__card_subtitle">Поможем арендовать отраслевую 1С. Посоветуем конфигурацию и доработки.</p>
                             </div>
                         </div>
                     </div>
@@ -178,22 +132,68 @@
                         <div class="priority__card">
                             <img class="priority__card_icon" src="./image/priority__card_icon.png" alt="icon">
                             <div class="priority__card_text">
-                                <p class="priority__card_title">Ведение бухгалтерии по вашим первичным документам</p>
-                                <p class="priority__card_subtitle">Мы отражаем в бухгалтерской программе 1С все операции вашего поселка — например,</p>
+                                <p class="priority__card_title">Минимальные тарифы</p>
+                                <p class="priority__card_subtitle">Мы знаем, как для вас важно минимизировать расходы на ведение</p>
                             </div>
                         </div>
                         <div class="priority__card">
                             <img class="priority__card_icon" src="./image/priority__card_icon.png" alt="icon">
                             <div class="priority__card_text">
-                                <p class="priority__card_title">Ведение бухгалтерии по вашим первичным документам</p>
-                                <p class="priority__card_subtitle">Мы отражаем в бухгалтерской программе 1С все операции вашего поселка — например,</p>
+                                <p class="priority__card_title">Всё важное включено</p>
+                                <p class="priority__card_subtitle">Все необходимые услуги ведения бухгалтерии описаны в договоре и</p>
                             </div>
                         </div>
                         <div class="priority__card">
                             <img class="priority__card_icon" src="./image/priority__card_icon.png" alt="icon">
                             <div class="priority__card_text">
-                                <p class="priority__card_title">Ведение бухгалтерии по вашим первичным документам</p>
-                                <p class="priority__card_subtitle">Мы отражаем в бухгалтерской программе 1С все операции вашего поселка — например,</p>
+                                <p class="priority__card_title">Всё под контролем</p>
+                                <p class="priority__card_subtitle">Мы рекомендуем арендовать 1С в облаке, что позволяет вам контролировать ведение</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="priority__cards_row">
+                        <div class="priority__card">
+                            <img class="priority__card_icon" src="./image/priority__card_icon.png" alt="icon">
+                            <div class="priority__card_text">
+                                <p class="priority__card_title">Никаких рисков</p>
+                                <p class="priority__card_subtitle">Первая оплата наших услуг состоится через месяц после начала нашего сотрудничества. </p>
+                            </div>
+                        </div>
+                        <div class="priority__card">
+                            <img class="priority__card_icon" src="./image/priority__card_icon.png" alt="icon">
+                            <div class="priority__card_text">
+                                <p class="priority__card_title">Взаимодействие с вашими юристами</p>
+                                <p class="priority__card_subtitle">Бесплатно сформируем сверки взаиморасчетов с должниками —</p>
+                            </div>
+                        </div>
+                        <div class="priority__card">
+                            <img class="priority__card_icon" src="./image/priority__card_icon.png" alt="icon">
+                            <div class="priority__card_text">
+                                <p class="priority__card_title">Команда специалистов</p>
+                                <p class="priority__card_subtitle">Ведение учета по разным направлениям (разнесение выписки банка, начисление</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="priority__cards_row">
+                        <div class="priority__card">
+                            <img class="priority__card_icon" src="./image/priority__card_icon.png" alt="icon">
+                            <div class="priority__card_text">
+                                <p class="priority__card_title">Большой опыт</p>
+                                <p class="priority__card_subtitle">Опыт, полученный при ведении бухгалтерского учета многих наших</p>
+                            </div>
+                        </div>
+                        <div class="priority__card">
+                            <img class="priority__card_icon" src="./image/priority__card_icon.png" alt="icon">
+                            <div class="priority__card_text">
+                                <p class="priority__card_title">Постановка задач и общение в мессенджере</p>
+                                <p class="priority__card_subtitle">Общение по нашему с вами сотрудничеству происходит в общем</p>
+                            </div>
+                        </div>
+                        <div class="priority__card">
+                            <img class="priority__card_icon" src="./image/priority__card_icon.png" alt="icon">
+                            <div class="priority__card_text">
+                                <p class="priority__card_title">Выполнение дополнительных задач</p>
+                                <p class="priority__card_subtitle">Составление любых финансовых отчетов по вашей форме, ведение учета расходов по</p>
                             </div>
                         </div>
                     </div>
