add style course

--- a/index.html
+++ b/index.html
@@ -224,17 +224,17 @@
                             <div class="course__card_content">
                                 <img class="course__cards_icon" src="./image/course__cards_icon.svg" alt="icon">
                                  <div class="course__card_text">
-                                    <p class="course__card_title">< 50</p>
+                                    <p class="course__card_title">50-100</p>
                                     <p class="course__card_subtitle">участков</p>
                                  </div>
                             </div>
                             <button class="course__button">Позвонить</button>
                         </div>
-                        <div class="course__card">
+                        <div class="course__card2">
                             <div class="course__card_content">
                                 <img class="course__cards_icon" src="./image/course__cards_icon.svg" alt="icon">
                                  <div class="course__card_text">
-                                    <p class="course__card_title">< 50</p>
+                                    <p class="course__card_title">101-150</p>
                                     <p class="course__card_subtitle">участков</p>
                                  </div>
                             </div>
@@ -242,21 +242,21 @@
                         </div>
                     </div>
                     <div class="course__cards_row2">
-                        <div class="course__card">
+                        <div class="course__card2">
                             <div class="course__card_content">
                                 <img class="course__cards_icon" src="./image/course__cards_icon.svg" alt="icon">
                                  <div class="course__card_text">
-                                    <p class="course__card_title">< 50</p>
+                                    <p class="course__card_title">151-200</p>
                                     <p class="course__card_subtitle">участков</p>
                                  </div>
                             </div>
                             <button class="course__button">Позвонить</button>
                         </div>
-                        <div class="course__card">
+                        <div class="course__card2">
                             <div class="course__card_content">
                                 <img class="course__cards_icon" src="./image/course__cards_icon.svg" alt="icon">
                                  <div class="course__card_text">
-                                    <p class="course__card_title">< 50</p>
+                                    <p class="course__card_title">> 200</p>
                                     <p class="course__card_subtitle">участков</p>
                                  </div>
                             </div>
@@ -285,16 +285,16 @@
                     <div class="feedback__form">
                         <div class="feedback__form_up">
                             <div class="feedback__form_left">
-                                <input class="feedback__input" type="text" name="Имя" id="" placeholder="Имя">
-                                <input class="feedback__input" type="tel" name="Телефон" id="" placeholder="Телефон">
+                                <input class="feedback__input" type="text" name="Имя" id="" placeholder="   Имя">
+                                <input class="feedback__input" type="tel" name="Телефон" id="" placeholder="   Телефон">
                             </div>
                             <div class="feedback__form_right">
-                                <input class="feedback__input" type="text" name="Фамилия" id="" placeholder="Фамилия">
-                                <input class="feedback__input" type="email" name="E-mail*" id="" placeholder="E-mail*">
+                                <input class="feedback__input" type="text" name="Фамилия" id="" placeholder="   Фамилия">
+                                <input class="feedback__input" type="email" name="E-mail*" id="" placeholder="   E-mail*">
                             </div>
                         </div>
                         <div class="feedback__form_center">
-                            <input class="feedback__input-center" type="text" name="Комментарий" id="" placeholder="Комментарий">
+                            <input class="feedback__input-center" type="text" name="Комментарий" id="" placeholder="   Комментарий">
                         </div>
                         <div class="feedback__form_description">
                             <input class="feedback__checkbox" type="checkbox" name="" id="" >
