--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
                                     <p class="course__card_subtitle">участков</p>
                                  </div>
                             </div>
-                            <button class="course__button">Позвонить</button>
+                            <button class="course__button2">Позвонить</button>
                         </div>
                     </div>
                     <div class="course__cards_row2">
@@ -250,7 +250,7 @@
                                     <p class="course__card_subtitle">участков</p>
                                  </div>
                             </div>
-                            <button class="course__button">Позвонить</button>
+                            <button class="course__button2">Позвонить</button>
                         </div>
                         <div class="course__card2">
                             <div class="course__card_content">
@@ -260,7 +260,7 @@
                                     <p class="course__card_subtitle">участков</p>
                                  </div>
                             </div>
-                            <button class="course__button">Позвонить</button>
+                            <button class="course__button2">Позвонить</button>
                         </div>
                     </div>
                 </div>
@@ -285,12 +285,16 @@
                     <div class="feedback__form">
                         <div class="feedback__form_up">
                             <div class="feedback__form_left">
-                                <input class="feedback__input" type="text" name="Имя" id="" placeholder="   Имя">
-                                <input class="feedback__input" type="tel" name="Телефон" id="" placeholder="   Телефон">
+                                <input class="feedback__input" type="text" name="Имя" id="" placeholder="  Имя">
+                                <input class="feedback__input" type="tel" name="Телефон" id="" placeholder="  Телефон">
                             </div>
                             <div class="feedback__form_right">
-                                <input class="feedback__input" type="text" name="Фамилия" id="" placeholder="   Фамилия">
-                                <input class="feedback__input" type="email" name="E-mail*" id="" placeholder="   E-mail*">
+                                <input class="feedback__input" type="text" name="Фамилия" id="" placeholder="  Фамилия">
+                                <!-- <input class="feedback__input" type="email" name="E-mail*" id="" placeholder="   E-mail*"> -->
+                                <label class="placeholder-box">
+                                    <input required type="text">
+                                    <div class="placeholder-text">E-mail <strong style="color: red;">*</strong></div>
+                                </label>
                             </div>
                         </div>
                         <div class="feedback__form_center">
@@ -298,7 +302,7 @@
                         </div>
                         <div class="feedback__form_description">
                             <input class="feedback__checkbox" type="checkbox" name="" id="" >
-                            <p class="feedback__form_description_text">Нажимая кнопку «Отправить», я даю свое согласие на обработку моих персональных данных, в соответствии с Федеральным законом от 27.07.2006 года №152-ФЗ «О персональных данных», на условиях и для целей, определенных в Согласии на обработку персональных данных *</p>
+                            <p class="feedback__form_description_text">Нажимая кнопку «Отправить», я даю свое согласие на обработку моих персональных данных, в соответствии с Федеральным законом от 27.07.2006 года №152-ФЗ «О персональных данных», на условиях и для целей, определенных в Согласии на обработку персональных данных <strong style="color: red;">*</strong></p>
                         </div>
                         <div class="feedback__button_container">
                             <button class="feedback__form_button">Отправить</button>
