--- a/index.html
+++ b/index.html
@@ -64,21 +64,21 @@
                             <img class="priority__card_icon" src="./image/priority__card_icon.png" alt="icon">
                             <div class="priority__card_text">
                                 <p class="priority__card_title">Ведение бухгалтерии по вашим первичным документам</p>
-                                <p class="priority__card_subtitle">Мы отражаем в бухгалтерской программе 1С все операции вашего поселка — например,</p>
+                                <div class="priority__card_subtitle">Мы отражаем в бухгалтерской программе 1С все операции вашего поселка — например, <a class="priority__card_style-text"href="#">подробнее</a></div>
                             </div>
                         </div>
                         <div class="priority__card">
                             <img class="priority__card_icon" src="./image/priority__card_icon.png" alt="icon">
                             <div class="priority__card_text">
                                 <p class="priority__card_title">Сдача отчетности</p>
-                                <p class="priority__card_subtitle">Мы вовремя составляем и сдаем все необходимые отчеты в ИФНС, Росстат и</p>
+                                <p class="priority__card_subtitle">Мы вовремя составляем и сдаем все необходимые отчеты в ИФНС, Росстат и <a class="priority__card_style-text"href="#">подробнее</a></p>
                             </div>
                         </div>
                         <div class="priority__card">
                             <img class="priority__card_icon" src="./image/priority__card_icon.png" alt="icon">
                             <div class="priority__card_text">
                                 <p class="priority__card_title">Сдача отчетности</p>
-                                <p class="priority__card_subtitle">Мы ведем учет ваших кадров, начисляем и выплачиваем зарплату, правильно и вовремя</p>
+                                <p class="priority__card_subtitle">Мы ведем учет ваших кадров, начисляем и выплачиваем зарплату, правильно и вовремя <a class="priority__card_style-text"href="#">подробнее</a></p>
                             </div>
                         </div>
                     </div>
@@ -87,21 +87,21 @@
                             <img class="priority__card_icon" src="./image/priority__card_icon.png" alt="icon">
                             <div class="priority__card_text">
                                 <p class="priority__card_title">Индивидуальный договор</p>
-                                <p class="priority__card_subtitle">Заключим индивидуальный договор с вами, отразим все необходимые именно вам</p>
+                                <p class="priority__card_subtitle">Заключим индивидуальный договор с вами, отразим все необходимые именно вам <a class="priority__card_style-text"href="#">подробнее</a></p>
                             </div>
                         </div>
                         <div class="priority__card">
                             <img class="priority__card_icon" src="./image/priority__card_icon.png" alt="icon">
                             <div class="priority__card_text">
                                 <p class="priority__card_title">Защита от ошибок</p>
-                                <p class="priority__card_subtitle">Фиксируем в договоре нашу финансовую ответственность на случай любых ошибок. </p>
+                                <p class="priority__card_subtitle">Фиксируем в договоре нашу финансовую ответственность на случай любых ошибок. <a class="priority__card_style-text"href="#">подробнее</a> </p>
                             </div>
                         </div>
                         <div class="priority__card">
                             <img class="priority__card_icon" src="./image/priority__card_icon.png" alt="icon">
                             <div class="priority__card_text">
                                 <p class="priority__card_title">Оповещение должников</p>
-                                <p class="priority__card_subtitle">Делаем ежемесячные рассылки о состоянии расчетов с собственниками участков, это</p>
+                                <p class="priority__card_subtitle">Делаем ежемесячные рассылки о состоянии расчетов с собственниками участков, это <a class="priority__card_style-text"href="#">подробнее</a></p>
                             </div>
                         </div>
                     </div>
@@ -110,7 +110,7 @@
                             <img class="priority__card_icon" src="./image/priority__card_icon.png" alt="icon">
                             <div class="priority__card_text">
                                 <p class="priority__card_title">Сверки и переписка с членами СНТ по e-mail</p>
-                                <p class="priority__card_subtitle">Мы отражаем в бухгалтерской программе 1С все операции вашего поселка — например,</p>
+                                <p class="priority__card_subtitle">Мы отражаем в бухгалтерской программе 1С все операции вашего поселка — например, <a class="priority__card_style-text"href="#">подробнее</a></p>
                             </div>
                         </div>
                         <div class="priority__card">
@@ -133,21 +133,21 @@
                             <img class="priority__card_icon" src="./image/priority__card_icon.png" alt="icon">
                             <div class="priority__card_text">
                                 <p class="priority__card_title">Минимальные тарифы</p>
-                                <p class="priority__card_subtitle">Мы знаем, как для вас важно минимизировать расходы на ведение</p>
+                                <p class="priority__card_subtitle">Мы знаем, как для вас важно минимизировать расходы на ведение <a class="priority__card_style-text"href="#">подробнее</a></p>
                             </div>
                         </div>
                         <div class="priority__card">
                             <img class="priority__card_icon" src="./image/priority__card_icon.png" alt="icon">
                             <div class="priority__card_text">
                                 <p class="priority__card_title">Всё важное включено</p>
-                                <p class="priority__card_subtitle">Все необходимые услуги ведения бухгалтерии описаны в договоре и</p>
+                                <p class="priority__card_subtitle">Все необходимые услуги ведения бухгалтерии описаны в договоре и <a class="priority__card_style-text"href="#">подробнее</a></p>
                             </div>
                         </div>
                         <div class="priority__card">
                             <img class="priority__card_icon" src="./image/priority__card_icon.png" alt="icon">
                             <div class="priority__card_text">
                                 <p class="priority__card_title">Всё под контролем</p>
-                                <p class="priority__card_subtitle">Мы рекомендуем арендовать 1С в облаке, что позволяет вам контролировать ведение</p>
+                                <p class="priority__card_subtitle">Мы рекомендуем арендовать 1С в облаке, что позволяет вам контролировать ведение <a class="priority__card_style-text"href="#">подробнее</a></p>
                             </div>
                         </div>
                     </div>
@@ -156,21 +156,21 @@
                             <img class="priority__card_icon" src="./image/priority__card_icon.png" alt="icon">
                             <div class="priority__card_text">
                                 <p class="priority__card_title">Никаких рисков</p>
-                                <p class="priority__card_subtitle">Первая оплата наших услуг состоится через месяц после начала нашего сотрудничества. </p>
+                                <p class="priority__card_subtitle">Первая оплата наших услуг состоится через месяц после начала нашего сотрудничества. <a class="priority__card_style-text"href="#">подробнее</a></p>
                             </div>
                         </div>
                         <div class="priority__card">
                             <img class="priority__card_icon" src="./image/priority__card_icon.png" alt="icon">
                             <div class="priority__card_text">
                                 <p class="priority__card_title">Взаимодействие с вашими юристами</p>
-                                <p class="priority__card_subtitle">Бесплатно сформируем сверки взаиморасчетов с должниками —</p>
+                                <p class="priority__card_subtitle">Бесплатно сформируем сверки взаиморасчетов с должниками — <a class="priority__card_style-text"href="#">подробнее</a></p>
                             </div>
                         </div>
                         <div class="priority__card">
                             <img class="priority__card_icon" src="./image/priority__card_icon.png" alt="icon">
                             <div class="priority__card_text">
                                 <p class="priority__card_title">Команда специалистов</p>
-                                <p class="priority__card_subtitle">Ведение учета по разным направлениям (разнесение выписки банка, начисление</p>
+                                <p class="priority__card_subtitle">Ведение учета по разным направлениям (разнесение выписки банка, начисление <a class="priority__card_style-text"href="#">подробнее</a></p>
                             </div>
                         </div>
                     </div>
@@ -179,21 +179,21 @@
                             <img class="priority__card_icon" src="./image/priority__card_icon.png" alt="icon">
                             <div class="priority__card_text">
                                 <p class="priority__card_title">Большой опыт</p>
-                                <p class="priority__card_subtitle">Опыт, полученный при ведении бухгалтерского учета многих наших</p>
+                                <p class="priority__card_subtitle">Опыт, полученный при ведении бухгалтерского учета многих наших <a class="priority__card_style-text"href="#">подробнее</a></p>
                             </div>
                         </div>
                         <div class="priority__card">
                             <img class="priority__card_icon" src="./image/priority__card_icon.png" alt="icon">
                             <div class="priority__card_text">
                                 <p class="priority__card_title">Постановка задач и общение в мессенджере</p>
-                                <p class="priority__card_subtitle">Общение по нашему с вами сотрудничеству происходит в общем</p>
+                                <p class="priority__card_subtitle">Общение по нашему с вами сотрудничеству происходит в общем <a class="priority__card_style-text"href="#">подробнее</a></p>
                             </div>
                         </div>
                         <div class="priority__card">
                             <img class="priority__card_icon" src="./image/priority__card_icon.png" alt="icon">
                             <div class="priority__card_text">
                                 <p class="priority__card_title">Выполнение дополнительных задач</p>
-                                <p class="priority__card_subtitle">Составление любых финансовых отчетов по вашей форме, ведение учета расходов по</p>
+                                <p class="priority__card_subtitle">Составление любых финансовых отчетов по вашей форме, ведение учета расходов по <a class="priority__card_style-text"href="#">подробнее</a></p>
                             </div>
                         </div>
                     </div>
