add style after mistakes

--- a/index.html
+++ b/index.html
@@ -38,11 +38,16 @@
         <!-- banner -->
         <section class="banner">
             <div class="container">
-                <div class="banner__image">
-                    <img class="banner__image_img" src="./image/banner__background-image.png" alt="banner">
-                    <div class="banner__text">
-                        <p class="banner__title">Бухгалтерские обслуживание</p>
-                        <p class="banner__subtitle">для СНТ и коттеджных поселков<br> и гаражных кооперативов</p>
+                <div class="banner__container">
+                    <div class="banner__image">
+                        <img class="banner__image_img" src="./image/banner__background-image.png" alt="banner">
+                        
+                        <div class="banner__text_container">
+                            <div class="banner__text">
+                                <p class="banner__title">Бухгалтерские обслуживание</p>
+                                <p class="banner__subtitle">для СНТ и коттеджных поселков<br> и гаражных кооперативов</p>
+                        </div>
+                        </div>
                     </div>
                 </div>
                 
@@ -319,9 +324,9 @@
         <div class="container">
             <div class="footer__container">
                 <div class="footer__info">
-                    <div class="footer__info_text">© 2018-2021 СНТ Бухгалтерия</div>
-                    <div class="footer__info_text"> Услуги предоставляются ИП Бекетов Никита Александрович, ИНН 323501052743, ОГРНИП319774600479523.</div>
-                    <div class="footer__info_text">Юридический адрес: 115172, г. Москва, Краснохолмская набережная, дом 13 строение 1</div>
+                    <div class="footer__info_text footer__info_row1">© 2018-2021 СНТ Бухгалтерия</div>
+                    <div class="footer__info_text  footer__info_row2"> Услуги предоставляются ИП Бекетов Никита Александрович, ИНН 323501052743, ОГРНИП319774600479523.</div>
+                    <div class="footer__info_text  footer__info_row3">Юридический адрес: 115172, г. Москва, Краснохолмская набережная, дом 13 строение 1</div>
                 </div>
                 <div class="footer__social">
                     <img src="./image/footer__social_icon-vk.svg" alt="vk" class="footer__social_icon-vk">
