--- a/index.html
+++ b/index.html
@@ -290,19 +290,19 @@
                     <div class="feedback__form">
                         <div class="feedback__form_up">
                             <div class="feedback__form_left">
-                                <input class="feedback__input" type="text" name="Имя" id="" placeholder="  Имя">
-                                <input class="feedback__input" type="tel" name="Телефон" id="" placeholder="  Телефон">
+                                <input class="feedback__input" type="text" name="Имя" id="" placeholder="Имя">
+                                <input class="feedback__input" type="tel" name="Телефон" id="" placeholder="Телефон">
                             </div>
                             <div class="feedback__form_right">
-                                <input class="feedback__input" type="text" name="Фамилия" id="" placeholder="  Фамилия">
+                                <input class="feedback__input" type="text" name="Фамилия" id="" placeholder="Фамилия">
                                 <label class="placeholder-box">
-                                    <input required type="text">
+                                    <input class="feedback__input" required type="text">
                                     <div class="placeholder-text">E-mail <strong style="color: red;">*</strong></div>
                                 </label>
                             </div>
                         </div>
                         <div class="feedback__form_center">
-                            <input class="feedback__input-center" type="text" name="Комментарий" id="" placeholder="   Комментарий">
+                            <input class="feedback__input-center" type="text" name="Комментарий" id="" placeholder="Комментарий">
                         </div>
                         <div class="feedback__form_description">
                             <input class="feedback__checkbox" type="checkbox" name="" id="" >
