add width blocks

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                         <div class="priority__card">
                             <img class="priority__card_icon" src="./image/priority__card_icon.png" alt="icon">
                             <div class="priority__card_text">
-                                <p class="priority__card_title">Сверки и переписка с членами СНТ по e-mail</p>
+                                <p class="priority__card_title">Сверки и переписка с членами СНТ &nbspпо&nbspe&nbsp-&nbspmail</p>
                                 <p class="priority__card_subtitle">Мы отражаем в бухгалтерской программе 1С все операции вашего поселка — например, <a class="priority__card_style-text"href="#">подробнее</a></p>
                             </div>
                         </div>
